--- a/convert_to_k-order.ipynb
+++ b/convert_to_k-order.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "puzzles = pd.read_csv(\"puzzles.csv\")\n",
     "puzzles.head()\n",
-    "puzzles = puzzles[puzzles['puzzle_type'].str.contains('cube')]"
+    "puzzles = puzzles[puzzles[\"puzzle_type\"].str.contains(\"cube\")]"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "def convert_to_kociemba1(cube_str):\n",
-    "    parts = cube_str.split(';')\n",
+    "    parts = cube_str.split(\";\")\n",
     "\n",
     "    color_def = parts\n",
     "\n",
@@ -37,15 +37,15 @@
     "        print(cube_str)\n",
     "        raise ValueError(\"魔方的阶数不正确或输入字符串长度不匹配\")\n",
     "\n",
-    "    color_map = {'A': 'U', 'B': 'R', 'C': 'F', 'D': 'D', 'E': 'L', 'F': 'B'}\n",
+    "    color_map = {\"A\": \"U\", \"B\": \"R\", \"C\": \"F\", \"D\": \"D\", \"E\": \"L\", \"F\": \"B\"}\n",
     "    mapped_def = [color_map[c] for c in color_def]\n",
     "\n",
-    "    kociemba_order = ''.join(mapped_def)\n",
+    "    kociemba_order = \"\".join(mapped_def)\n",
     "    return kociemba_order\n",
     "\n",
     "\n",
     "def convert_to_kociemba2(cube_str):\n",
-    "    parts = cube_str.split(';')\n",
+    "    parts = cube_str.split(\";\")\n",
     "\n",
     "    color_def = parts\n",
     "\n",
@@ -56,13 +56,13 @@
     "\n",
     "    def map_to_kociemba(index, order):\n",
     "        face_size = order ** 2\n",
-    "        faces = ['U', 'R', 'F', 'D', 'L', 'B']\n",
+    "        faces = [\"U\", \"R\", \"F\", \"D\", \"L\", \"B\"]\n",
     "        face_index = index // face_size\n",
     "        return faces[face_index]\n",
     "\n",
     "    mapped_def = [map_to_kociemba(int(n[1:]), order) for n in color_def]\n",
     "\n",
-    "    kociemba_order = ''.join(mapped_def)\n",
+    "    kociemba_order = \"\".join(mapped_def)\n",
     "    return kociemba_order"
    ]
   },
@@ -85,19 +85,18 @@
     "standard_final_kociembas = []\n",
     "\n",
     "for idx, row in tqdm(puzzles.iterrows(), total=len(puzzles)):\n",
-    "    # 首先对solution state进行转换\n",
-    "    if row['solution_state'][0] != 'N':\n",
-    "        solution_kociembas.append(convert_to_kociemba1(row['solution_state']))\n",
+    "    if row[\"solution_state\"][0] != \"N\":\n",
+    "        solution_kociembas.append(convert_to_kociemba1(row[\"solution_state\"]))\n",
     "    else:\n",
-    "        solution_kociembas.append(convert_to_kociemba2(row['solution_state']))\n",
+    "        solution_kociembas.append(convert_to_kociemba2(row[\"solution_state\"]))\n",
     "\n",
-    "    if row['initial_state'][0] != 'N':\n",
-    "        initial_kociembas.append(convert_to_kociemba1(row['initial_state']))\n",
+    "    if row[\"initial_state\"][0] != \"N\":\n",
+    "        initial_kociembas.append(convert_to_kociemba1(row[\"initial_state\"]))\n",
     "    else:\n",
-    "        initial_kociembas.append(convert_to_kociemba2(row['initial_state']))\n",
+    "        initial_kociembas.append(convert_to_kociemba2(row[\"initial_state\"]))\n",
     "\n",
-    "puzzles['initial_kociemba'] = initial_kociembas\n",
-    "puzzles['solution_kociemba'] = solution_kociembas"
+    "puzzles[\"initial_kociemba\"] = initial_kociembas\n",
+    "puzzles[\"solution_kociemba\"] = solution_kociembas"
    ]
   },
   {
@@ -106,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "puzzles.to_csv('cube_puzzles.csv', index=False)"
+    "puzzles.to_csv(\"cube_puzzles.csv\", index=False)"
    ]
   }
  ],
