--- a/ensemble.ipynb
+++ b/ensemble.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from tqdm import  tqdm"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -16,9 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "origin = pd.read_csv(\"./submissions/submission_750427.csv\")\n",
-    "sub1 = pd.read_csv(\"./submissions/782922.csv\")\n",
-    "sub2 = pd.read_csv(\"./submissions/786623.csv\")"
+    "origin = pd.read_csv(\"./submissions/submission_713689.csv\")\n",
+    "sub1 = pd.read_csv(\"./submissions/780591.csv\")\n",
+    "sub2 = pd.read_csv(\"./submissions/786623.csv\")\n",
+    "sub3 = pd.read_csv(\"./submissions/785441.csv\")"
    ]
   },
   {
@@ -65,7 +66,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>-d1.-r0.-f1.-d1.-r0.-f0.-r1.f1.d1.-f1.d0.d0</td>\n",
+       "      <td>-d1.-r0.f0.-r1.f1.d1.-r1.-f0.d1.f0.d1.d1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -82,12 +83,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   id                                        moves\n",
-       "0   0                                       r1.-f1\n",
-       "1   1                 f0.-r0.d1.f1.f1.-d0.r1.f0.d0\n",
-       "2   2  -d1.-r0.-f1.-d1.-r0.-f0.-r1.f1.d1.-f1.d0.d0\n",
-       "3   3               f1.r0.f1.r0.d1.f1.r0.d1.r1.-f0\n",
-       "4   4    -d1.-f0.-d0.-f1.r1.-f1.r1.-f1.r0.r0.d0.d0"
+       "   id                                      moves\n",
+       "0   0                                     r1.-f1\n",
+       "1   1               f0.-r0.d1.f1.f1.-d0.r1.f0.d0\n",
+       "2   2   -d1.-r0.f0.-r1.f1.d1.-r1.-f0.d1.f0.d1.d1\n",
+       "3   3             f1.r0.f1.r0.d1.f1.r0.d1.r1.-f0\n",
+       "4   4  -d1.-f0.-d0.-f1.r1.-f1.r1.-f1.r0.r0.d0.d0"
       ]
      },
      "execution_count": 3,
@@ -117,14 +118,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 398/398 [00:00<00:00, 1311.30it/s]"
+      "100%|██████████| 398/398 [00:00<00:00, 1909.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "283 107 8\n"
+      "397 0 0 1\n"
      ]
     },
     {
@@ -139,6 +140,7 @@
     "count1 = 0\n",
     "count2 = 0\n",
     "count3 = 0\n",
+    "count4 = 0\n",
     "\n",
     "for i in tqdm(range(len(origin))):\n",
     "    num_id = origin.loc[i, \"id\"]\n",
@@ -146,16 +148,22 @@
     "    origin_moves = origin.loc[i, \"moves\"]\n",
     "    sub1_moves = sub1.loc[i, \"moves\"]\n",
     "    sub2_moves = sub2.loc[i, \"moves\"]\n",
+    "    sub3_moves = sub3.loc[i, \"moves\"]\n",
     "\n",
-    "    if len(origin_moves) <= len(sub1_moves) and len(origin_moves) <= len(sub2_moves):\n",
+    "    min_len = min(len(origin_moves), len(sub1_moves), len(sub2_moves), len(sub3_moves))\n",
+    "\n",
+    "    if len(origin_moves) == min_len:\n",
     "        count1 += 1\n",
     "        new_moves = origin_moves\n",
-    "    elif len(sub1_moves) <= len(sub2_moves) and len(sub1_moves) <= len(origin_moves):\n",
+    "    elif len(sub1_moves) == min_len:\n",
     "        count2 += 1\n",
     "        new_moves = sub1_moves\n",
-    "    elif len(sub2_moves) <= len(sub1_moves) and len(sub2_moves) <= len(origin_moves):\n",
+    "    elif len(sub2_moves) == min_len:\n",
     "        count3 += 1\n",
     "        new_moves = sub2_moves\n",
+    "    elif len(sub3_moves) == min_len:\n",
+    "        count4 += 1\n",
+    "        new_moves = sub3_moves\n",
     "\n",
     "    new_row = pd.DataFrame({\n",
     "        \"id\": [num_id],\n",
@@ -163,7 +171,7 @@
     "    })\n",
     "    new_sub = pd.concat([new_sub, new_row], ignore_index=True)\n",
     "\n",
-    "print(count1, count2, count3)"
+    "print(count1, count2, count3, count4)"
    ]
   },
   {
@@ -250,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_sub.to_csv(\"./submissions/0127.csv\", index=False)"
+    "new_sub.to_csv(\"./submissions/0128.csv\", index=False)"
    ]
   }
  ],
